...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blackforest" />

    <TextView
        android:id="@+id/etShoppingItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="BLACK FOREST"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/big_image"
        app:layout_constraintStart_toStartOf="@+id/big_image"
        app:layout_constraintTop_toBottomOf="@+id/etItemPrice" />

        <Button
            android:id="@+id/btnAddShoppingItem"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/buy_now_bg"
            android:fontFamily="@font/open_sans_semibold"
...
